--- a/root/index.jade
+++ b/root/index.jade
@@ -18,7 +18,7 @@ html(lang="zh")
                     li.it
                         a(href="/") 首页
                     li.it
-                        a(href="/blog/list") 博客
+                        a(href="/blog") 博客
         div.hy-home-main
             section.hy-home-page.hy-home-intro.hy-home-activepage
                 div.hy-page-wrap.hy-intro-wrap
