--- a/root/blog/index.jade
+++ b/root/blog/index.jade
@@ -7,7 +7,7 @@ html(lang="zh")
     meta(name="author" content="胡月")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
     meta(name="apple-mobile-web-app-capable" content="yes")
-    title 详情页面
+    title 列表页
     link(rel="stylesheet" href="/css/common.css")
     link(rel="stylesheet" href="/css/article.css")
   body
